--- a/dressup.css
+++ b/dressup.css
@@ -1,3 +1,5 @@
+/* GENERAL */
+
 body{
     margin: 0;
 	background-color: #fff;
@@ -31,6 +33,8 @@ character {
     z-index: -1000;   
 }
 
+/* HEADER */
+
 .titleDiv {
     display: flex;
     flex-direction: row;
@@ -53,6 +57,8 @@ character {
     top: 6px;
     box-shadow: none;
 }
+
+/* CLOTHES */
 
 .acc {
     visibility:hidden;
@@ -79,56 +85,58 @@ character {
     z-index: 1;
 }
 
+/* BUTTONS */
+
 button[id$="_button"], button[id$="_button_prev"] {
     position: relative;
 }
 
 #acc_button {
     top: 50px;
-    right: 100px;
+    right: -500px;
 }
 
 #acc_button_prev {
     top: 50px;
-    right: -500px;
+    right: 100px;
 }
 
 #hair_button {
     top: 200px;
-    right: 200px;
+    right: -400px;
 }
 
 #hair_button_prev {
     top: 200px;
-    right: -400px;
+    right: 200px;
 }
 
 #shirt_button {
     top: 400px;
-    right: 300px;
+    left: 300px;
 }
 
 #shirt_button_prev {
     top: 400px;
-    left: 300px;
+    right: 300px;
 }
 
 #pant_button {
     top: 600px;
-    right: 400px;
+    left: 200px;
 }
 
 #pant_button_prev {
     top: 600px;
-    left: 200px;
+    right: 400px;
 }
 
 #shoe_button {
     top: 750px;
-    left: -500px;
+    left: 100px;
 }
 
 #shoe_button_prev {
     top: 750px;
-    left: 100px;
+    left: -500px;
 }
